[gd_scene load_steps=7 format=3 uid="uid://clphwcg80nac3"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_4ycrh"]
[ext_resource type="Script" path="res://Components/MoveComponent.gd" id="1_5c0es"]
[ext_resource type="Script" path="res://Components/StatsComponent.gd" id="1_ii8r5"]
[ext_resource type="Script" path="res://Components/ScaleComponent.gd" id="2_2kloi"]
[ext_resource type="Script" path="res://Components/FlashComponent.gd" id="4_5woke"]
[ext_resource type="Script" path="res://Components/ShakeComponent.gd" id="4_c8hnu"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_4ycrh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("1_ii8r5")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("1_5c0es")
actor = NodePath("..")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("2_2kloi")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_c8hnu")
sprite = NodePath("../AnimatedSprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_5woke")
sprite = NodePath("../AnimatedSprite2D")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
